#73 - Stop game from going off-screen

--- a/apps/lundin/src/app/modules/minestryger/minestryger.component.scss
+++ b/apps/lundin/src/app/modules/minestryger/minestryger.component.scss
@@ -3,6 +3,7 @@
 	display: grid;
 	grid-template-areas: "settings game highscores";
 	grid-template-columns: 15rem 1fr 15rem;
+	grid-template-rows: calc(100vh - 5rem);
 }
 
 lundin-minestryger-game {
